<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="24dp"
    android:background="@color/background_primary_hard">

    <TextView
        style="@style/MyTheme.Text.Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/service_info"
        android:layout_marginBottom="20dp"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginBottom="16dp">

        <TextView
            style="@style/MyTheme.Text.Caption"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/service_name" />

        <TextView
            android:id="@+id/tvServiceName"
            style="@style/MyTheme.Text.Subtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginBottom="16dp">

        <TextView
            style="@style/MyTheme.Text.Caption"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/service_account" />

        <TextView
            android:id="@+id/tvAccount"
            style="@style/MyTheme.Text.Subtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginBottom="16dp">

        <TextView
            style="@style/MyTheme.Text.Caption"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/service_issuer" />

        <TextView
            android:id="@+id/tvIssuer"
            style="@style/MyTheme.Text.Subtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginBottom="16dp">

        <TextView
            style="@style/MyTheme.Text.Caption"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/service_added_date" />

        <TextView
            android:id="@+id/tvCreatedAt"
            style="@style/MyTheme.Text.Subtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginBottom="16dp">

        <TextView
            style="@style/MyTheme.Text.Caption"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/service_usage_count" />

        <TextView
            android:id="@+id/tvUsageCount"
            style="@style/MyTheme.Text.Subtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginBottom="16dp">

        <TextView
            style="@style/MyTheme.Text.Caption"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/service_digits" />

        <TextView
            android:id="@+id/tvDigits"
            style="@style/MyTheme.Text.Subtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginBottom="16dp">

        <TextView
            style="@style/MyTheme.Text.Caption"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/service_algorithm" />

        <TextView
            android:id="@+id/tvAlgorithm"
            style="@style/MyTheme.Text.Subtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"/>

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:layout_marginBottom="16dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                style="@style/MyTheme.Text.Caption"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/service_secret_key" />

            <TextView
                android:id="@+id/tvSecretKey"
                style="@style/MyTheme.Text.Subtitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:lineSpacingExtra="4dp"
                android:paddingTop="4dp" />

        </LinearLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnToggleKey"
            style="@style/MyTheme.Button.AlternativeNormal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/service_show_button"
            android:textSize="12sp"
            android:layout_alignParentEnd="true"/>

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="4dp"
        android:gravity="center">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnQR"
            style="@style/MyTheme.Button.AlternativeNormal"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.2"
            android:layout_marginEnd="12dp"
            android:paddingVertical="12dp"
            android:text="@string/service_qr_button"
            app:icon="@drawable/ic_qr_code" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnEdit"
            style="@style/MyTheme.Button.AlternativeNormal"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingVertical="12dp"
            android:text="@string/service_edit_button"
            app:icon="@drawable/ic_brush" />

    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnDelete"
        style="@style/MyTheme.Button.Accent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="12dp"
        android:paddingVertical="12dp"
        android:text="@string/service_delete_button"
        app:icon="@drawable/ic_delete" />

</LinearLayout>